feat: add Category, CRUD, API
