# app/Models/Category.php
@@ -5,13 +5,12 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
-class Product extends Model
+class Category extends Model
 {
     use HasFactory;
     protected $fillable = [
         'name',
-        'description',
-        'price',
-        'category_id'
+        'type',
+        'description'
     ];
 }
